# bids-sm-spec-architect

./: .gitignore  pyproject.toml
stats_spec_architect/: __init__.py  __main__.py  make_json.py  nodes_transformations_setup.py  nodes_transformations_setup_try_tabs.py
